--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Eu amo Bacon</h1>
-    <p class="cl-p-red">bacon bacon bacon bacon bacon</p>
-    <p>bacon bacon bacon bacon bacon</p>
-    <p class="cl-p-red">bacon bacon bacon bacon bacon</p>
-    <p>bacon bacon bacon bacon bacon</p>
-    <p class="cl-p-red">bacon bacon bacon bacon bacon</p>
+    <p class="cl-p-red">bacon bacon bacon bacon bacon.</p>
+    <p>bacon bacon bacon bacon bacon.</p>
+    <p class="cl-p-red">bacon bacon bacon bacon bacon.</p>
+    <p>bacon bacon bacon bacon bacon.</p>
+    <p class="cl-p-red">bacon bacon bacon bacon bacon.</p>
     <img id="id-bacon-img" src="bacon_1f953.png" alt="bacon-img">
     <img id="id-broccoli-img" src="broccoli_1f966_b.png" alt="broccoli-img">
 </body>
